[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Lore.gd" type="Script" id=1]
[ext_resource path="res://Assets/lore.ogv" type="VideoStream" id=2]
[ext_resource path="res://Assets/102-1021733_clip-art-blank-world-map-world-map-outline (1).png" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -896.0
margin_bottom = -480.0
rect_scale = Vector2( 1.87488, 1.79976 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
stream = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fallen" type="Sprite" parent="."]
position = Vector2( 874.799, 385.049 )
scale = Vector2( 1.13778, 1.3363 )
texture = ExtResource( 3 )
offset = Vector2( -318.867, -63.6452 )

[node name="Back" type="Button" parent="."]
margin_left = 914.392
margin_top = 8.13193
margin_right = 1018.39
margin_bottom = 28.1319
text = "Back to menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Replay" type="Button" parent="."]
margin_left = 914.392
margin_top = 60.8336
margin_right = 1018.39
margin_bottom = 80.8336
text = "Replay"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skip" type="Button" parent="."]
margin_left = 914.392
margin_top = 28.1319
margin_right = 1018.39
margin_bottom = 48.1319
text = "Skip"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Finished" type="Label" parent="."]
margin_left = 893.312
margin_top = 46.8336
margin_right = 1007.31
margin_bottom = 60.8336
text = "Cutscene finished"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="mouse_entered" from="Back" to="." method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="Back" to="." method="_on_Back_mouse_exited"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="mouse_entered" from="Replay" to="." method="_on_Replay_mouse_entered"]
[connection signal="mouse_exited" from="Replay" to="." method="_on_Replay_mouse_exited"]
[connection signal="pressed" from="Replay" to="." method="_on_Replay_pressed"]
[connection signal="mouse_entered" from="Skip" to="." method="_on_Skip_mouse_entered"]
[connection signal="mouse_exited" from="Skip" to="." method="_on_Skip_mouse_exited"]
[connection signal="pressed" from="Skip" to="." method="_on_Skip_pressed"]
